# bitburner-rs

./: .gitignore  Cargo.toml  README.md  deny.toml
.codex/: AGENTS.md  config.toml
.github/workflows/: ci.yml  release.yml
crates/bitburner-api/: Cargo.toml
crates/bitburner-api/src/: client.rs  error.rs  lib.rs  protocol.rs  sync.rs  transport.rs  types.rs
crates/bitburner-cli/: Cargo.toml
crates/bitburner-cli/src/: args.rs  cli.rs  connection.rs  fs_sync.rs  http_bridge.rs  main.rs  path.rs  sync_upload.rs  ws.rs
crates/bitburner-core/: Cargo.toml
crates/bitburner-core/src/: client.rs  lib.rs  path.rs  protocol.rs  sync.rs  transport.rs
docs/: http-api.md  live-testing.md  manual-test.md  mcp-plan.md  zed-extension.md  zed-plan.md
docs/examples/: tasks.json
extensions/bitburner-zed/: Cargo.toml  README.md
extensions/bitburner-zed/src/: lib.rs
extensions/zed-bitburner/: Cargo.toml  README.md  extension.toml
extensions/zed-bitburner/src/: lib.rs
src/: args.rs  cli.rs  error.rs  fs_sync.rs  lib.rs  main.rs  path.rs  remote.rs  ws.rs
