[workspace]
resolver = "3"
members = [
  "crates/bitburner-api",
  "crates/bitburner-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "WTFPL"

[workspace.dependencies]
anyhow = "1"
bitburner-api = { path = "crates/bitburner-api" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tungstenite = "0.24"
