[package]
name = "bitburner-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "bbrs"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
bitburner-api.workspace = true
bitburner-core.workspace = true
clap.workspace = true
serde_json.workspace = true
